// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportBackupPhrase should render for import 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Import an Identity
    </h1>
    <p
      class="info"
    >
      To import a KILT Identity, you will need your backup phrase consisting of 12 words.
    </p>
    <form
      autocomplete="off"
    >
      <ol
        class="items"
      >
        <li
          class="item"
        >
          <input
            aria-label="1"
            class="input"
            id="0"
            name="0"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="0"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="2"
            class="input"
            id="1"
            name="1"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="1"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="3"
            class="input"
            id="2"
            name="2"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="2"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="4"
            class="input"
            id="3"
            name="3"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="3"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="5"
            class="input"
            id="4"
            name="4"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="4"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="6"
            class="input"
            id="5"
            name="5"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="5"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="7"
            class="input"
            id="6"
            name="6"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="6"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="8"
            class="input"
            id="7"
            name="7"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="7"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="9"
            class="input"
            id="8"
            name="8"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="8"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="10"
            class="input"
            id="9"
            name="9"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="9"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="11"
            class="input"
            id="10"
            name="10"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="10"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="12"
            class="input"
            id="11"
            name="11"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="11"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
      </ol>
      <p
        class="buttonLine"
      >
        <button
          class="button"
          disabled=""
          type="submit"
        >
          Next Step
        </button>
        <output
          class="errorTooltip"
          hidden=""
        />
      </p>
    </form>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </section>
</div>
`;

exports[`ImportBackupPhrase should render for reset 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Set a new password
    </h1>
    <p
      class="info"
    >
      In order to set a new password you have to re-enter your backup phrase
    </p>
    <form
      autocomplete="off"
    >
      <ol
        class="items"
      >
        <li
          class="item"
        >
          <input
            aria-label="1"
            class="input"
            id="0"
            name="0"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="0"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="2"
            class="input"
            id="1"
            name="1"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="1"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="3"
            class="input"
            id="2"
            name="2"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="2"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="4"
            class="input"
            id="3"
            name="3"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="3"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="5"
            class="input"
            id="4"
            name="4"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="4"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="6"
            class="input"
            id="5"
            name="5"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="5"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="7"
            class="input"
            id="6"
            name="6"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="6"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="8"
            class="input"
            id="7"
            name="7"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="7"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="9"
            class="input"
            id="8"
            name="8"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="8"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="10"
            class="input"
            id="9"
            name="9"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="9"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="11"
            class="input"
            id="10"
            name="10"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="10"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="12"
            class="input"
            id="11"
            name="11"
            type="text"
            value=""
          />
          <output
            class="wordErrorTooltip"
            for="11"
            hidden=""
          >
            It looks like there’s a typo in this word
          </output>
        </li>
      </ol>
      <p
        class="buttonLine"
      >
        <button
          class="button"
          disabled=""
          type="submit"
        >
          Next Step
        </button>
        <output
          class="errorTooltip"
          hidden=""
        />
      </p>
    </form>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </section>
</div>
`;
